@@ -52,8 +52,9 @@ Where "NUMBER" is the bug number.
  - Added a confirm-dialog when trying to close a server-tab with
    children.
  - Server list's edit window now gives you an option of a network
-   specific 'Second choice' nickname.
- - 
+   specific "Second choice" nickname.
+ - Auto detect RusNet and use /NICKSERV to identify instead of /MSG.
+ - Added /Ghost command.
  - 
 
 
